--- a/programs/vidbloq-program/Cargo.toml
+++ b/programs/vidbloq-program/Cargo.toml
@@ -16,8 +16,9 @@ no-idl = []
 no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
-
 [dependencies]
 anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
 anchor-spl = "0.31.0"
+ephemeral-rollups-sdk = { version = "0.2.4", features = ["anchor"] }
+ephemeral-vrf-sdk = {version = "0.1.2", features = ["anchor"]}
 
